tests/content/payloads/good/json/object.js
const payload: string = JSON.stringify({
  a: 1,
  b: 2,
  c: 3,
})

export default payload
