tests/content/payloads/bad/json/syntax-error.js
const payload: string = "{a 123}"

export default payload
